# device-control

./: .gitignore  .gitmodules  Cargo.toml  Readme.md  go.work  go.work.sum
_common/: go.mod
_common/file-store/: utils.go
api/: bruno.json
api/SunriseAndSunset/: Get sunrise and sunset.bru
api/environments/: dev.bru
api/hue/: group.bru
go/: Readme.md  go.work  go.work.sum
go/hue-control/: go.mod  go.sum  main.go
go/keylight-charm/: go.mod  go.sum  main.go
go/keylight-cli/: go.mod  go.sum  main.go
go/keylight-control/: go.mod  go.sum  main.go
hue-control/: go.mod  go.sum  main.go
hue-control/internal/: control.go
hue-control/pubilc/: public.go
keylight-charm/: go.mod
keylight-cli/: Cargo.toml  go.mod  main.go
keylight-cli/cli/: commands.go
keylight-cli/src/: cli.rs  main.rs
keylight-control/: Cargo.toml  go.mod  main.go
keylight-control/control/: finder.go  store.go  utils.go  utils_test.go
keylight-control/public/: public.go
keylight-control/src/: keylight.rs  lib.rs
keylight-control/src/keylight/: control.rs  db.rs  finder.rs  model.rs
keylight-ui/: Cargo.toml  package.json  pnpm-lock.yaml
keylight-ui/src/: App.css  App.tsx
keylight-ui/src-tauri/: Cargo.toml  tauri.conf.json
rust/: Cargo.toml
rust/keylight-cli/: Cargo.toml
rust/keylight-cli/src/: cli.rs  display.rs
settings/: go.mod  main.go
settings/internal/: settings.go
src/: cli.rs  keylight.rs  keylight_adapter.rs  keylight_control.rs  keylight_discover.rs  keylight_finder.rs  lib.rs  main.rs
tui/: go.mod  go.sum  main.go
ui/: go.mod  main.go
(+190 files in other folders)
