[package]
name = "keylight-on"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.16", features = ["blocking", "json"] }
zeroconf = "0.10.5"
serde = "1.0.159"
serde_json = "1.0"
indicatif = "0.17.3"
clap = { version = "4.2.2", features = ["derive"] }
log = "0.4"
env_logger = "0.10.0"
console = "0.15.5"
