[package]
name = "keylight-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.2", features = ["derive"] }
console = "0.15.5"
env_logger = "0.10.0"
indicatif = "0.17.3"
keylight-control = { path = "../keylight-control" }
